src/test/ui/regions/regions-close-object-into-object-4.stderr
error: cannot infer an appropriate lifetime
  --> $DIR/regions-close-object-into-object-4.rs:10:11
   |
LL | fn i<'a, T, U>(v: Box<dyn A<U>+'a>) -> Box<dyn X + 'static> {
   |                   ---------------- data with this lifetime...
LL |     box B(&*v) as Box<dyn X>
   |     ------^^^---------------
   |     |     |
   |     |     ...and is captured here
   |     ...is required to be `'static` by this...
   |
help: consider changing the trait object's explicit `'static` bound
   |
LL | fn i<'a, T, U>(v: Box<dyn A<U>+'a>) -> Box<dyn X + 'a> {
   |                                                    ^^
help: alternatively, set an explicit `'static` lifetime in this parameter
   |
LL | fn i<'a, T, U>(v: std::boxed::Box<(dyn A<U> + 'static)>) -> Box<dyn X + 'static> {
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

